third_party/blink/web_tests/external/wpt/media-source/idlharness.window-expected.txt
This is a testharness.js-based test.
Found 56 tests; 50 PASS, 6 FAIL, 0 TIMEOUT, 0 NOTRUN.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface URL: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface AudioTrack: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface VideoTrack: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface TextTrack: original interface defined assert_true: Original interface should be defined expected true got false
PASS MediaSource interface: existence and properties of interface object
PASS MediaSource interface object length
PASS MediaSource interface object name
PASS MediaSource interface: existence and properties of interface prototype object
PASS MediaSource interface: existence and properties of interface prototype object's "constructor" property
PASS MediaSource interface: existence and properties of interface prototype object's @@unscopables property
PASS MediaSource interface: attribute sourceBuffers
PASS MediaSource interface: attribute activeSourceBuffers
PASS MediaSource interface: attribute readyState
PASS MediaSource interface: attribute duration
PASS MediaSource interface: attribute onsourceopen
PASS MediaSource interface: attribute onsourceended
PASS MediaSource interface: attribute onsourceclose
PASS MediaSource interface: operation addSourceBuffer(DOMString)
PASS MediaSource interface: operation removeSourceBuffer(SourceBuffer)
PASS MediaSource interface: operation endOfStream(EndOfStreamError)
PASS MediaSource interface: operation setLiveSeekableRange(double, double)
PASS MediaSource interface: operation clearLiveSeekableRange()
PASS MediaSource interface: operation isTypeSupported(DOMString)
PASS SourceBuffer interface: existence and properties of interface object
PASS SourceBuffer interface object length
PASS SourceBuffer interface object name
PASS SourceBuffer interface: existence and properties of interface prototype object
PASS SourceBuffer interface: existence and properties of interface prototype object's "constructor" property
PASS SourceBuffer interface: existence and properties of interface prototype object's @@unscopables property
PASS SourceBuffer interface: attribute mode
PASS SourceBuffer interface: attribute updating
PASS SourceBuffer interface: attribute buffered
PASS SourceBuffer interface: attribute timestampOffset
PASS SourceBuffer interface: attribute audioTracks
PASS SourceBuffer interface: attribute videoTracks
FAIL SourceBuffer interface: attribute textTracks assert_true: The prototype object must have a property "textTracks" expected true got false
PASS SourceBuffer interface: attribute appendWindowStart
PASS SourceBuffer interface: attribute appendWindowEnd
PASS SourceBuffer interface: attribute onupdatestart
PASS SourceBuffer interface: attribute onupdate
PASS SourceBuffer interface: attribute onupdateend
PASS SourceBuffer interface: attribute onerror
PASS SourceBuffer interface: attribute onabort
PASS SourceBuffer interface: operation appendBuffer(BufferSource)
PASS SourceBuffer interface: operation abort()
PASS SourceBuffer interface: operation remove(double, unrestricted double)
PASS SourceBufferList interface: existence and properties of interface object
PASS SourceBufferList interface object length
PASS SourceBufferList interface object name
PASS SourceBufferList interface: existence and properties of interface prototype object
PASS SourceBufferList interface: existence and properties of interface prototype object's "constructor" property
PASS SourceBufferList interface: existence and properties of interface prototype object's @@unscopables property
PASS SourceBufferList interface: attribute length
PASS SourceBufferList interface: attribute onaddsourcebuffer
PASS SourceBufferList interface: attribute onremovesourcebuffer
Harness: the test ran to completion.

